[project]
name = "agent-api"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno==1.4.6",
  "duckduckgo-search",
  "fastapi[standard]",
  "openai",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "yfinance",
  "beautifulsoup4>=4.13.4",
  "cohere>=5.15.0",
  "deepseek>=1.0.0",
  "lancedb>=0.22.0",
  "mcp>=1.9.0",
  "ollama>=0.4.8",
  "openai>=1.79.0",
  "pandas>=2.2.3",
  "pylance>=0.27.2",
  "spider-client>=0.1.36",
  "sqlalchemy>=2.0.41",
  "tantivy>=0.24.0",
  "tavily-python>=0.7.2",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*", "agno.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
